--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@angular/material": "^18.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -26,6 +26,9 @@
     "@angular-devkit/build-angular": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/jasmine": "^5.1.8",
+    "jasmine-core": "^5.9.0",
+    "karma": "^6.4.4",
     "typescript": "~5.4.0"
   }
 }
